--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Asociar Doc con CSS</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
+<style>
+    p {
+        color: blue;
+    }
+</style>
 
 <body>
+
+    <h1> Vamos a cambiar el background de este elemento</h1>
+
+    <h2>Como primer ejercicio tendremos que cambiar el fondo del html</h2>
+
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae deserunt vel sunt consequuntur provident voluptate mollitia ut natus. Error voluptatibus quam earum, laborum facilis in aspernatur facere iure laboriosam quasi. Itaque alias quo nobis
+        iusto rem mollitia quasi ex aperiam atque, sit accusamus inventore iure exercitationem sunt quam doloremque, magni repellendus labore impedit a rerum nihil sequi molestias laborum? Hic.</p>
 
 </body>
 
