--- a/border_radius.html
+++ b/border_radius.html
@@ -2,35 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Border radius</title>
-    <link rel="stylesheet" href="border_radius.css">
+    <link rel="stylesheet" href="border_radius.css" />
 </head>
 
 <body>
-
-
     <div>
         <table>
-            <caption> <span>Ventas Mensuales </span> </caption>
-
-
+            <caption>
+                <span>Ventas Mensuales </span>
+            </caption>
 
             <tbody>
                 <tr>
                     <td>Trabajador</td>
                     <td>Total</td>
                     <td>Departamento</td>
-
-
                 </tr>
                 <tr id="uno">
                     <td>Alfreds Futterkiste</td>
                     <td>5,1352€</td>
                     <td>Construcción</td>
-
                 </tr>
                 <tr id="dos">
                     <td>Francisco Chang</td>
@@ -45,15 +40,13 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td id="tfoot" colspan="3">* El iva no esta incluido en las ventas</td>
+                    <td id="tfoot" colspan="3">
+                        * El iva no esta incluido en las ventas
+                    </td>
                 </tr>
             </tfoot>
         </table>
-
     </div>
-
-
-
 </body>
 
 </html>
